ve.ui.LinearContextItem: Prevent action buttons from wrapping
This is needed after OOUI v0.29.3, which allowed them to wrap.

Bug: T208596

--- a/src/ui/styles/contextitems/ve.ui.LinearContextItem.css
+++ b/src/ui/styles/contextitems/ve.ui.LinearContextItem.css
@@ -38,6 +38,7 @@
 }
 
 .ve-ui-linearContextItem-actions {
+	white-space: nowrap;
 	display: table-cell;
 	width: 1%;
 	padding: 0.5em;
